@@ -204,6 +204,8 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1695: MergeForEach does not carry user defined schema if any one of the merged ForEach has user defined schema (daijy)
+
 PIG-1684: Inconsistent usage of store func. (thejas)
 
 PIG-1694: union-onschema projects null schema at parsing stage for some queries (thejas)
